Update Realase Note 1.0.3

--- a/Packs/Cyberwatch/ReleaseNotes/1_0_3.md
+++ b/Packs/Cyberwatch/ReleaseNotes/1_0_3.md
@@ -1,6 +1,5 @@
-
 #### Integrations
 
 ##### Cyberwatch
-
-- Add fetch incidents.
+- Add fetch-incidents.
+- **Docker image:** demisto/python3:3.12.8.3296088
